temporarily fixes bug that makes the extras grid too tall

--- a/css/index.css
+++ b/css/index.css
@@ -373,9 +373,7 @@ background-color: rgba(0,0,0,0.8);
     background-color: var(--translucent-main);
     border-color: var(--border);
     border-width: 2px;
-    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15);
-    height:300px;
-    
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.15); 
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 }
